# dpipe

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
docs/: CMakeLists.txt  overview.md
include/dpipe/: builders.h  dpipe.h  elements.h  frame.h  mut-frame.h
include/dpipe/elements/: decoupler.h  filter.h  interfaces.h  pipeline.h  sink.h  source.h  splitter.h
include/dpipe/utils/: async-queue.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  example.cpp  tests.cpp  toys.h
